assets/css/layout/_default/list.css
hr.ldots {
    margin-left: 0;
    border: none;
    width: var(--golden-ratio);
}

hr.ldots::after {
    --tsf: translateY(-2.3rem);
    display: block;
    width: 100%;
    height: 1rem;
    text-align: center;
    color: var(--g18s);
    font-size: 3rem;
    content: '…';
}

#list-subsection {
    padding: 0 calc(1rem - 1ex);
}

#list-subsection .carousel__viewport,
#taxonomy .carousel__viewport {
    padding: 0 1rem;
}

#list-taxonomy .carousel {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: nowrap;
    align-items: flex-start;
}

#list-taxonomy .section-title {
    margin: var(--smallskip);
    writing-mode: tb;
}

#list-tags {
    position: sticky;
    position: -webkit-sticky;
    top: var(--vhead);
    right: var(--void);
}

#term section.pagewidth,
#taxonomy section.pagewidth,
#list-posts  {
    min-height: calc(var(--vbody) - 7.258rem);
}

#taxonomy #list-tags {
    position: unset;
    float: unset;
    margin: unset;
    padding: 0 var(--void) 3ex;
    width: unset;
}

#taxonomy #list-series,
#taxonomy #list-categories {
    display: unset;
}

#taxonomy #list-tags .section-title,
#taxonomy #list-series .section-title,
#taxonomy #list-categories .section-title {
    margin: var(--bigskip) 0 var(--smallskip);
    writing-mode: unset;
}

#has-pagination {
    margin-top: 1in;
}

.section-title#series {
    margin-left: auto;
    width: var(--golden-ratio);
}

.list-year {
    display: flex;
    position: relative;
    align-items: baseline;
}

.list-year.textwidth {
    margin-left: auto;
}

.list-year > .section-title {
    width: 52pt;
    text-align: right;
}


.list-year > div {
    flex: 1;
}

.list-month > summary {
    padding-left: 1rem;
    list-style: none;
}

.list-day a {
    display: block;
    margin: 1ex 1rem;
    padding: 1ex 0;
    width: 100%;
    font-size: var(--normalsize);
}

.list-day a.has-pre::before {
    position: absolute;
    left: 0;
    padding: 0.25rem 0;
    width: 5rem;
    text-align: right;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-size: var(--footnotesize);
}

#feed ul.rounded.invert a {
    font-size: var(--footnotesize);
}

@media only screen and (max-width: 640px) {

    body > main > aside#list-tags {
        position: unset;
        float: unset;
        padding: 0 var(--void);
    }

    #list-tags > nav {
        padding: 0 1ex;
    }

    #home #list-tags .section-title,
    #home #list-posts .section-title {
        padding-left: 1rem;
    }

}

